# Bachelor

./: .gitignore  README.md  maxi.md  proposal.md
data_analysis/: Cargo.toml  duckdb.sql  frankfurt.csv  merged.csv  us-east-1.csv
data_analysis/src/: lib.rs  merge.rs  plot.rs  plot_old.rs  scrape.rs  utils.rs
data_analysis/src/fio/: fio_etl.rs  fio_plot.rs  mod.rs
data_analysis/src/server/: mod.rs  server_etl.rs  server_plot.rs  utils.rs
data_analysis/src/snowset/: mod.rs  snowset_etl.rs  snowset_plot.rs
data_analysis/src/thesios/: iteration.rs  mod.rs  plot.rs
data_analysis/src/vantage/: mod.rs  vantage_etl.rs  vantage_plot.rs
diskio/: Cargo.toml
diskio/src/: main.rs
ec2/: Cargo.toml  README.md  connect.sh  get_data.sh  ip.sh  setup.sh
ec2/src/: main.rs  util.rs
mvp/: .env  .env.example  Cargo.toml  README.md  tests.sh
mvp/parquet_files/: test_file.parquet  test_file2.parquet
mvp/src/: handlers.rs  lib.rs  main.rs  mvp.rs  route.rs
mvp/src/client/: mod.rs
mvp/src/server/: handlers.rs  mod.rs  route.rs  routes.rs
mvp/tests/: tests.sh
mvp/tests/parquet_files/: schema.sql
price_analysis/: Cargo.toml  aws_ebs_data.csv  ec2.csv
price_analysis/src/: main.rs  plot.rs  utils.rs
public-bi/: Cargo.toml  system_prompt.txt
public-bi/src/: main.rs
scraper/: Cargo.toml
scraper/src/: main.rs
sdk/: README.md  cleanup.sh  connect.sh  get_data.sh  ip.sh  setup.sh  test.fio
sdk/src/: api.rs  ec2.rs  main.rs  security_rules.rs  ssm.rs  utils.rs
snowset/: Cargo.toml  duckdb.sql
v1/: Cargo.toml
v1/src/: client.rs  server.rs
