[package]
name = "iterationen"
version = "0.1.0"
edition = "2021"

[dependencies]
charming = "0.4.0"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
scraper = "0.13"
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["compression-gzip", "compression-br", "compression-deflate"] }
google-cloud-storage = "0.23.0"


[[bin]]
name = "fio"
path = "src/fio/mod.rs"

[[bin]]
name = "vantage"
path = "src/vantage/mod.rs"

[[bin]]
name = "snowset"
path = "src/snowset/mod.rs"

[[bin]]
name = "server"
path = "src/server/mod.rs"

[[bin]]
name = "thesios"
path = "src/thesios/iteration.rs"

[[bin]]
name = "plot_thesios"
path = "src/thesios/plot.rs"
