[package]

name = "mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
parquet = "53.1.0"
tokio-util = { version = "0.7.12", features = ["io"] }

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
