[package]
name = "iterationen"
version = "0.1.0"
edition = "2021"

[dependencies]
charming = "0.4.0"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
scraper = "0.13"
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["compression-gzip", "compression-br", "compression-deflate"] }

[[bin]]
name = "merge"
path = "src/merge.rs"

[[bin]]
name = "plot"
path = "src/plot.rs"

[[bin]]
name = "scrape"
path = "src/scrape.rs"

[[bin]]
name = "plot_old"
path = "src/plot_old.rs"
