[package]
name = "public-bi"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.18", features = ["all"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["stream", "rustls-tls", "json"], default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
